    In this case the ACE type is INTEGER and no power, operation, operand
    Implem with radio buttons:
    Dimension : [ ] menu
                [ ] champ (entier)
    Possibility to use GeneralParameter creation to check the validity: cf test.java


- idem for precision: create an ACE of type REAL vs INTEGER for dimension

    
- Service module; 
  - service ID will be a URL, make field larger to right of box 


- When deleting the last expression, the panel on the right of the expression module should be empty






v0.8 
- checks before exporting to XML
- Parameter Module, new parameter, dimension and precision: radio buttons to select menu or field to enter constant of new ACE


v0.7 2013-06-03 
- removed the fields on the right of the expression module
- new panel contents showing CONTEXTUAL contents of the expression selected
- removed the non-AtomicConstantExpression from the list of allowed expressions for power in 4 dialogs for creating expressions
- fixed bug in Export to XML: when a group HAS BEEN selected previously and is unselected; the save panel still appears 

v0.6 2013-05-07 
- added method getChildren(...) in PDLGroup for wrapper
- added button to generate XML and its callback method in application 
- wrappers added by Carlo 

v0.5 2013-04-23 
- added dialog for creating a AtomicParameter Expression
- added dialog for creating a ParenthesisContent Expression
- added dialog for creating a Function

v0.4 2013-04-22 
- usage of TreeMap<String, PDLStatement> for storage of statements

v0.3 2013-03-01 
- replaced reached by reachedInf and reachedSup in PDLCriterion, CriterionDialog
- usage of TreeMap<String, Criterion> for storage of criterions
  
v0.2 2013-02-21 
- added CMZ as author in the about box
- new button + dialog for creating AtomicConstantExpression
- new dialog for creating/modifying a parameter
- using Expression class from net.ivoa.parameter.model

v0.1 2013-02-20 
- initial revision checked into google code SVN repository